--- a/index.html
+++ b/index.html
@@ -804,10 +804,7 @@
   <footer>
     <div class="foot">
       <h1><img src="images/title-03.png" alt="" width="300"></h1>
-      <p>ご覧いただきありがとうございます。<br>
-        ご連絡は以下へお願いいたします。</p>
-
-      <p class="foote">mail: tearifamily5.gmail.com</p>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfXtJWf8dVBJHJ_zkCdqJcsMgUcYqVR8Qo9A-oU-I8Z-5rVdw/viewform?embedded=true" width="500" height="1000" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
 
       <small>&copy; 2023 Eri Maeda</small>
     </div>
