--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
 
             <div class="skill">
                 <div class="flex bord">
-                  <img src="images/illustrator.png" alt="" width="100">
+                  <img src="images/illustratorlogo.png" alt="" width="100">
                   <p>制作環境の導入と基本設定、イラストの作成・編集、加工などを学びました。<br>イラスト・ロゴ・地図等の作成が可能です。</p>
                 </div>
               </div>
@@ -783,7 +783,7 @@
               </div>
 
               <div class="skill">
-              <div class="flex bord"><img src="images/javascript.png" alt="" width="100">
+              <div class="flex bord"><img src="images/javascriptlogo.png" alt="" width="100">
                 <p>プログラミング方法、Web コンテンツとの連携など動的サイトの基礎を学びました。</p>
               </div>
             </div>
