--- a/index.html
+++ b/index.html
@@ -765,19 +765,19 @@
               </div>
               
                 <div class="skill">
-                <div class="flex bord"><img src="images/photoshop.png" alt="" width="100">
+                <div class="flex bord"><img src="images/photoshoplogo.png" alt="" width="100">
                   <p>制作環境の導入と基本設定、既存データの加工・編集などを学びました。<br>画像加工、合成などをすることができます。</p>
                 </div>
               </div>
 
               <div class="skill">
-                <div class="flex bord"><img src="images/html.png" alt="" width="100">
+                <div class="flex bord"><img src="images/htmllogo.png" alt="" width="100">
                   <p>Web 標準に準拠したコーディングができるよう基礎から学びました。</p>
                 </div>
               </div>
 
               <div class="skill">
-                <div class="flex bord"><img src="images/css.png" alt="" width="100">
+                <div class="flex bord"><img src="images/csslogo.png" alt="" width="100">
                   <p>レイアウト手法・スクリプトを用いたWeb ページの作成、レシポンシブWeb デザインの導入などを学びました。</p>
                 </div>
               </div>
