--- a/index.html
+++ b/index.html
@@ -754,36 +754,36 @@
 
           <h1><img src="images/title-01.png" alt="" width="300"></h1>
 
-          <div class="meter">
+          <div class="grid">
 
 
-            <div class="skill">
-                <div class="flex bord">
+            <div class="skill bord">
+                <div>
                   <img src="images/illustratorlogo.png" alt="" width="100">
                   <p>制作環境の導入と基本設定、イラストの作成・編集、加工などを学びました。<br>イラスト・ロゴ・地図等の作成が可能です。</p>
                 </div>
               </div>
               
-                <div class="skill">
-                <div class="flex bord"><img src="images/photoshoplogo.png" alt="" width="100">
+                <div class="skill bord">
+                <div><img src="images/photoshoplogo.png" alt="" width="100">
                   <p>制作環境の導入と基本設定、既存データの加工・編集などを学びました。<br>画像加工、合成などをすることができます。</p>
                 </div>
               </div>
 
-              <div class="skill">
-                <div class="flex bord"><img src="images/htmllogo.png" alt="" width="100">
+              <div class="skill bord">
+                <div><img src="images/htmllogo.png" alt="" width="100">
                   <p>Web 標準に準拠したコーディングができるよう基礎から学びました。</p>
                 </div>
               </div>
 
-              <div class="skill">
-                <div class="flex bord"><img src="images/csslogo.png" alt="" width="100">
+              <div class="skill bord">
+                <div><img src="images/csslogo.png" alt="" width="100">
                   <p>レイアウト手法・スクリプトを用いたWeb ページの作成、レシポンシブWeb デザインの導入などを学びました。</p>
                 </div>
               </div>
 
-              <div class="skill">
-              <div class="flex bord"><img src="images/javascriptlogo.png" alt="" width="100">
+              <div class="skill bord">
+              <div><img src="images/javascriptlogo.png" alt="" width="100">
                 <p>プログラミング方法、Web コンテンツとの連携など動的サイトの基礎を学びました。</p>
               </div>
             </div>
