--- a/index.html
+++ b/index.html
@@ -771,6 +771,12 @@
               </div>
 
               <div class="skill bord">
+                <div><img src="images/figmalogo.png" alt="" width="100">
+                  <p>カンプ作成を学びました。<br>画像加工、合成などをすることができます。</p>
+                </div>
+              </div>
+
+              <div class="skill bord">
                 <div><img src="images/htmllogo.png" alt="" width="100">
                   <p>Web 標準に準拠したコーディングができるよう基礎から学びました。</p>
                 </div>
