--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
     </div>
 
   </div>
+  <div class="scroll-downs">
+    <div class="mousey">
+      <div class="scroller"></div>
+    </div>
+  </div>
 </header>
 
 
