スクロールアニメ

--- a/index.html
+++ b/index.html
@@ -26,31 +26,28 @@
 
 </head>
 
+<!-- header -->
 <header>
-
+<!-- スクロールアニメ -->
   <div id="scrolly-video"></div>
 
   <div class="box">
     <img src="images/gif.png" alt="">
   </div>
 
-  <div id="loading">
-    <img class="spinner" src="loding.gif" alt="">
-
     <div>
       <script src="https://cdn.jsdelivr.net/npm/scrolly-video@latest/dist/scrolly-video.js">
-        defer
+        
       </script>
       <script>
         new ScrollyVideo({
           scrollyVideoContainer: "scrolly-video",
           src: "bgmovie.mp4",
-          cover: true,
+          cover: false,
         });
       </script>
     </div>
 
-  </div>
   <div class="scroll-downs">
     <div class="mousey">
       <div class="scroller"></div>
@@ -58,7 +55,7 @@
   </div>
 </header>
 
-
+<!-- body -->
 <body>
 
   <main>
