--- a/index.html
+++ b/index.html
@@ -817,7 +817,8 @@
   <footer>
     <div class="foot">
       <h1><img src="images/title-03.png" alt="" width="300"></h1>
-      
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfXtJWf8dVBJHJ_zkCdqJcsMgUcYqVR8Qo9A-oU-I8Z-5rVdw/viewform?embedded=true" width="500" height="1000" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+
       <small>&copy; 2023 Eri Maeda</small>
     </div>
 
