--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         new ScrollyVideo({
           scrollyVideoContainer: "scrolly-video",
           src: "bgmovie.mp4",
-          cover: false,
+          cover: true,
         });
       </script>
     </div>
