--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <figure class="stalker__fig fadein">
 
             <figcaption class="stalker__figCap">
-              <h2 class="foo flex">
+              <h2 class="foo flex about-heading">
                 <span class="letter" data-letter="D">D</span>
                 <span class="letter" data-letter="e">e</span>
                 <span class="letter" data-letter="s">s</span>
