--- a/index.html
+++ b/index.html
@@ -188,8 +188,20 @@
               <div class="modal-open"><a href="#moda6"><img src="images/works16.png" alt="" class="friends__img ">
 
                 </a></div>
+            </figure>
 
+            <figure class="friends__fig fadein">
 
+              <div class="modal-open"><a href="#moda9"><img src="images/works19.png" alt="" class="friends__img ">
+
+                </a></div>
+            </figure>
+
+            <figure class="friends__fig fadein">
+
+              <div class="modal-open"><a href="#moda6"><img src="images/works24.png" alt="" class="friends__img ">
+
+                </a></div>
             </figure>
           </div>
           <figure class="friends__fig fadein">
