--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
 
             <figure class="friends__fig fadein">
 
-              <div class="modal-open"><a href="#moda9"><img src="images/works19.png" alt="" class="friends__img ">
+              <div class="modal-open"><a href="#moda19"><img src="images/works19.png" alt="" class="friends__img ">
 
                 </a></div>
             </figure>
 
             <figure class="friends__fig fadein">
 
-              <div class="modal-open"><a href="#moda6"><img src="images/works24.png" alt="" class="friends__img ">
+              <div class="modal-open"><a href="#moda24"><img src="images/works24.png" alt="" class="friends__img ">
 
                 </a></div>
             </figure>
@@ -674,6 +674,66 @@
                   <img src="images/works17.png" alt=""><br><br>
                   <p class="modal-summary"><span>【概要】</span><br>
                     有限会社梶村商店様<br>
+                    ロゴ制作</p>
+                  <div class="center">
+                    <div>
+
+                      <p class="modal-text"><span>【コンセプト】</span><br>
+
+                      </p>
+                    </div>
+                    <div class="modal-left">
+                      <p class="modal-text"><span>【使用ツール】</span></p>
+                      <img class="modal-img" src="images/illustrator.png" alt="" width="100" height="100">
+                      <img class="modal-img" src="images/photoshop.png" alt="" width="100" height="100">
+                    </div>
+                  </div>
+
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="modal" id="moda19">
+            <a href="#!" class="overlay"></a>
+            <div class="modal-wrapper">
+              <div class="modal-contents">
+                <a href="#!" class="modal-close">✕</a>
+                <div class="modal-content">
+                  <img src="images/works20.png" alt=""><br><br>
+                  <p class="modal-summary"><span>【概要】</span><br>
+                    D-Chain様<br>
+                    ロゴ制作</p>
+                  <div class="center">
+                    <div>
+
+                      <p class="modal-text"><span>【コンセプト】</span><br>
+
+                      </p>
+                    </div>
+                    <div class="modal-left">
+                      <p class="modal-text"><span>【使用ツール】</span></p>
+                      <img class="modal-img" src="images/illustrator.png" alt="" width="100" height="100">
+                      <img class="modal-img" src="images/photoshop.png" alt="" width="100" height="100">
+                    </div>
+                  </div>
+
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="modal" id="moda21">
+            <a href="#!" class="overlay"></a>
+            <div class="modal-wrapper">
+              <div class="modal-contents">
+                <a href="#!" class="modal-close">✕</a>
+                <div class="modal-content">
+                  <img src="images/works25.png" alt=""><br><br>
+                  <p class="modal-summary"><span>【概要】</span><br>
+                    D-Chain様<br>
                     ロゴ制作</p>
                   <div class="center">
                     <div>
