--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                     <div>
 
                       <p class="modal-text"><span>【コンセプト】</span><br>
-
+ブロックチェーン企業様のロゴなので頭文字のＤとＣを鎖に見立ててつなぎ合わせたイメージにしました。
                       </p>
                     </div>
                     <div class="modal-left">
@@ -739,7 +739,7 @@
                     <div>
 
                       <p class="modal-text"><span>【コンセプト】</span><br>
-
+                        ブロックチェーン企業様のロゴなので会社名を鎖に見立ててつなぎ合わせたイメージにしました。
                       </p>
                     </div>
                     <div class="modal-left">
