--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
                     職業訓練校の課題で「広島健康堂」<br>
                     というテーマで架空サイトを制作</p>
-
+<a href=" https://erihanapcschool.github.io/kenkodo/" target="_blank">kenkodo</a>
                   <div class="center">
                     <div>
 
