--- a/index.html
+++ b/index.html
@@ -367,45 +367,7 @@
               </div>
             </div>
           </div>
-          <div class="modal" id="modal3">
-            <a href="#!" class="overlay"></a>
-            <div class="modal-wrapper">
-              <div class="modal-contents">
-                <a href="#!" class="modal-close">✕</a>
-                <div class="modal-content">
-                  <img src="images/art5.png" alt="" class="modal-image"><br>
-                  <p class="modal-summary"><span>【概要】</span><br>
-
-                    職業訓練校の課題で<br>
-                    サイトを制作</p>
-
-                  <div class="center">
-                    <div>
-
-                      <p class="modal-text"><span>【コンセプト】</span><br>
-                        五感と脳は密接な関係があり、<br>
-                        脳が疲れると五感が鈍ってしまうので<br>
-                        五感を刺激して、リフレッシュできる<br>
-                        架空の複合グランピングサイトを<br>
-                        制作しました。</p>
-                    </div>
-                    <div class="modal-left">
-                      <p class="modal-text"><span>【使用ツール】</span></p>
-                      <img class="modal-img" src="images/illustrator.png" alt="" width="100" height="100">
-                      <img class="modal-img" src="images/photoshop.png" alt="" width="100" height="100">
-                      <img class="modal-img" src="images/html.png" alt="" width="100" height="100">
-                      <img class="modal-img" src="images/css.png" alt="" width="100" height="100">
-                      <img class="modal-img" src="images/vscode.png" alt="" width="100" height="100">
-                      <img class="modal-img" src="images/figma.png" alt="" width="100" height="100">
-                    </div>
-                  </div>
-
-
-                </div>
-              </div>
-            </div>
-          </div>
-
+          
           <div class="modal" id="moda3">
             <a href="#!" class="overlay"></a>
             <div class="modal-wrapper">
@@ -802,17 +764,19 @@
                 <div class="modal-content">
                   <img src="images/works23.png" alt=""><br><br>
                   <p class="modal-summary"><span>【概要】</span><br>
-                    オータムセールのバナー制作 <br>
+                    楽天マラソンバナー制作 <br>
                     架空</p>
 
                   <div class="center">
                     <div>
 
                       <p class="modal-text"><span>【コンセプト】</span><br>
-                        一部の紅葉をツイード素材や<br>
-                        ウール素材にし<br>
-                        服に透過させることで秋服を<br>
-                        買いたくなるようなデザインに<br>
+                        楽天マラソンのワクワク感を<br>
+                        靴がマラソン大会をしているような<br>
+                        デザインと掛け合わせることで<br>
+                        目を引くデザインになるよう心がけました。<br>
+                        靴の裏に３１日までと表記することで<br>
+                        購買意欲を掻き立てるようにデザインに<br>
                         しました。
                       </p>
                     </div>
@@ -929,6 +893,7 @@
   <footer>
     <div class="foot">
       <h1><img src="images/title-03.png" alt="" width="300"></h1>
+        <p>mail : tearifamily5@gmail.com,</p>
 
       <small>&copy; 2023 Eri Maeda</small>
     </div>
