--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
                 </a></div>
               <div class="modal-open"><a href="#modal2"><img src="images/art4.png" alt="" class="friends__img ">
                 </a></div>
-              <div class="modal-open"><a href="#modal3"><img src="images/art5.png" alt="" class="friends__img ">
-                </a></div>
+              
             </div>
           </figure>
         </div>
@@ -215,13 +214,13 @@
           </div>
           <figure class="friends__fig fadein">
 
-            <div class="modal-open"><a href="#moda12"><img src="images/art1.png" alt="" class="friends__img ">
+            <div class="modal-open"><a href="#moda11"><img src="images/art1.png" alt="" class="friends__img ">
 
               </a></div>
           </figure>
           <figure class="friends__fig fadein">
 
-            <div class="modal-open"><a href="#moda11"><img src="images/art2.png" alt="" class="friends__img ">
+            <div class="modal-open"><a href="#moda12"><img src="images/art2.png" alt="" class="friends__img ">
 
               </a></div>
           </figure>
@@ -762,7 +761,7 @@
               <div class="modal-contents">
                 <a href="#!" class="modal-close">✕</a>
                 <div class="modal-content">
-                  <img src="images/works23.png" alt=""><br><br>
+                  <img src="images/works22.png" alt=""><br><br>
                   <p class="modal-summary"><span>【概要】</span><br>
                     楽天マラソンバナー制作 <br>
                     架空</p>
@@ -798,7 +797,7 @@
               <div class="modal-contents">
                 <a href="#!" class="modal-close">✕</a>
                 <div class="modal-content">
-                  <img src="images/works22.png" alt=""><br><br>
+                  <img src="images/works23.png" alt=""><br><br>
                   <p class="modal-summary"><span>【概要】</span><br>
                     オータムセールのバナー制作 <br>
                     架空</p>
@@ -893,7 +892,7 @@
   <footer>
     <div class="foot">
       <h1><img src="images/title-03.png" alt="" width="300"></h1>
-        <p>mail : tearifamily5@gmail.com,</p>
+        <p class="foote">mail : tearifamily5@gmail.com</p>
 
       <small>&copy; 2023 Eri Maeda</small>
     </div>
