--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
 
 
     <a href="#top" class="top__link" id="page-top"><img src="images/pagetop.png" alt=""></a>
-    <div class="container"><img src="fashon1.gif" alt="" width="150" class="walk"></div>
+    <div class="container"><img src="fashon1.gif" alt="" class="walk"></div>
   </footer>
 </body>
 
