--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
             </div>
 
           </div>
-
-
-
+<div class="line">
+<img src="images/line.jpg" alt="">
+</div>
         </div>
 
         <div class="wrapper">
